Updated Code and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 fastapi
-uvicorn[standard]
+uvicorn
 langchain
-langchain-community
-langchain-core
+langchain_community
+langchain_core
 langchain-groq
 supabase
 python-dotenv
 websockets
+pydantic
